[package]
name = "clawpad"
version = "0.3.3"
edition = "2024"

[dependencies]
eframe = "0.30"
egui = "0.30"
ropey = "1.6"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syntect = "5.2"
egui_commonmark = { version = "0.19" }
walkdir = "2.5"
itertools = "0.13"
log = "0.4"
env_logger = "0.11"
